# rye-inconsistent-locks-repro

./: README.md  pyproject.toml
src/rye_bug_repor/: __init__.py
