[project]
name = "rye-bug-repor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "George Macon", email = "george.macon@gtri.gatech.edu" }
]
dependencies = [
    "langchain>=0.3.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "langchain-community>=0.3.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_bug_repor"]
